# for_eigyo

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml
deep-research-orchestrator/backend/: Dockerfile  celerybeat-schedule.db  pyproject.toml
deep-research-orchestrator/backend/alembic/: env.py
deep-research-orchestrator/backend/alembic/versions/: 3d853a550391_initial_schema.py
deep-research-orchestrator/backend/app/: bootstrap.py  config.py  main.py
deep-research-orchestrator/backend/app/api/: artifacts.py  deps.py  engines.py  events.py  jobs.py  schemas.py  settings_routes.py
deep-research-orchestrator/backend/app/artifacts/: store.py
deep-research-orchestrator/backend/app/db/: events.py  models.py  session.py
deep-research-orchestrator/backend/app/llm/: client.py  profiles.py
deep-research-orchestrator/backend/app/normalizer/: normalize.py
deep-research-orchestrator/backend/app/orchestrator/: celery_app.py  service.py  tasks.py
deep-research-orchestrator/backend/app/runners/: client.py
deep-research-orchestrator/backend/app/security/: http_client.py  proxy.py  redaction.py  secrets.py  ssrf.py
deep-research-orchestrator/backend/app/synthesis/: compare.py  synthesize.py
deep-research-orchestrator/backend/tests/: conftest.py
deep-research-orchestrator/backend/tests/fixtures/: servers.py
deep-research-orchestrator/backend/tests/integration/: helpers.py  test_job_lifecycle.py  test_security_integration.py  test_sse_recovery_backup.py
deep-research-orchestrator/backend/tests/unit/: test_artifacts_secrets.py  test_normalize_compare.py  test_repo_hygiene.py  test_security.py
deep-research-orchestrator/runners/common/: pyproject.toml
deep-research-orchestrator/runners/common/runner_core/: __init__.py  app.py  engine.py  models.py
deep-research-orchestrator/runners/gpt_researcher/: .dockerignore  Dockerfile  Dockerfile.dockerignore  README.md  gptr_engine.py  main.py  pyproject.toml  worker.py
deep-research-orchestrator/runners/gpt_researcher/tests/: conftest.py  test_gptr_env.py  test_gptr_subprocess.py
deep-research-orchestrator/runners/open_deep_research/: .dockerignore  Dockerfile  Dockerfile.dockerignore  README.md  main.py  odr_engine.py  pyproject.toml  searxng_mcp.py  worker.py
deep-research-orchestrator/runners/open_deep_research/tests/: conftest.py  test_odr_config.py  test_odr_sources.py  test_odr_subprocess.py
fermiscope/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
fermiscope/.github/workflows/: ci.yml
fermiscope/config/: estimation.yaml  evidence_scoring.yaml  source_classes.yaml
fermiscope/examples/: README.md  demo_report.md
fermiscope/scripts/: generate_pdf_fixture.py  wheel_smoke_test.sh
fermiscope/src/fermiscope/: __init__.py  config.py  diagnostics.py  main.py
fermiscope/src/fermiscope/adversarial/: __init__.py  verifier.py
fermiscope/src/fermiscope/api/: __init__.py  app.py  app_state.py  routes.py  runs.py
fermiscope/src/fermiscope/decomposition/: __init__.py  engine.py
fermiscope/src/fermiscope/domain/: __init__.py  enums.py  models.py
fermiscope/src/fermiscope/estimation/: __init__.py  distributions.py  engine.py  fusion.py
fermiscope/src/fermiscope/evidence/: __init__.py  clustering.py  contradiction.py  dates.py  extractor.py  normalize.py  ranker.py
fermiscope/src/fermiscope/formula/: __init__.py  graph.py  parser.py  units.py
fermiscope/src/fermiscope/llm/: __init__.py  anthropic_provider.py  base.py  http_base.py  mock.py  noop.py  openai_compat.py  schemas.py  settings_store.py
fermiscope/src/fermiscope/models/: __init__.py  generator.py
fermiscope/tests/: conftest.py
fermiscope/tests/adversarial/: test_ai_fabrication.py  test_hostile_fetch.py  test_prompt_injection.py
fermiscope/tests/e2e/: test_browser.py  test_ui_flow.py
fermiscope/tests/integration/: test_api.py  test_api_fixes.py  test_audit_api_fixes.py  test_data_dir_creation.py  test_diagnostics_and_security.py  test_duckduckgo_and_selenium.py  test_fetcher.py  test_full_flow.py  test_input_validation.py  test_llm_connection.py  test_llm_key_isolation.py  test_llm_paths.py  test_llm_settings.py  test_office_fetch.py  test_param_edit_atomic.py  test_pipeline_mock.py  test_postgres_repository.py  test_rerun_state.py  test_restart_persistence.py  test_search_service.py  test_state_invalidation.py
fermiscope/tests/unit/: test_audit_fixes.py  test_clustering_contradiction.py  test_distributions_mc.py  test_evidence_ranker.py  test_formula.py  test_fusion.py  test_grid_extraction.py  test_misc.py  test_model_generator.py  test_packaging_resources.py  test_period_units.py  test_proxy.py  test_question_parser.py  test_question_period_units.py  test_review_fixes.py  test_security.py  test_sensitivity.py  test_source_authority_compat.py  test_units.py  test_verifier_decomposition.py
fermiscope/web/templates/: base.html  index.html  project.html
jupyter-local-llm/: .gitignore  LICENSE  LOOP_SYSTEM.md  README.md  pyproject.toml  requirements.txt
jupyter-local-llm/labextension/: .gitignore  README.md  install.json  package.json  pyproject.toml  tsconfig.json
jupyter-local-llm/labextension/jupyterlab_llmlab_completer/: __init__.py
jupyter-local-llm/labextension/src/: index.ts
jupyter-local-llm/labextension/style/: base.css
jupyter-local-llm/notebooks/: 00_overview.ipynb  01_quickstart_chat.ipynb  02_rag.ipynb  03_bookrag.ipynb  03_pagedrag.ipynb  04_bookrag.ipynb  05_multipaper.ipynb  06_tableqa.ipynb  07_docqa.ipynb  08_copilot_research.ipynb
jupyter-local-llm/src/llmlab/: __init__.py  app.py  app_ui.html  bookindex.py  bookrag.py  chat.py  client.py  complete.py  config.py  copilot_ui.html  copilotresearch.py  docparse.py  docqa.py  indexmanager.py  loop_ui.html  loopsys.py  m365_user_script.py  m365copilot.py  multipaper.py  pagedrag.py  rag.py  rerank.py  sandbox.py  tableqa.py  workspace.py
jupyter-local-llm/tests/: test_docid_multipaper.py  test_indexmanager.py
(+167 files in other folders)
