[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "for-eigyo"
version = "0.1.0"
description = "営業インテリジェンス総合ツール - Sales Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # CLI / UI
    "typer[all]>=0.9",
    "rich>=13.0",
    "streamlit>=1.30",
    # HTTP
    "httpx>=0.27",
    "tenacity>=8.2",
    # Search
    "duckduckgo-search>=6.0",
    # NLP (conventional)
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "plotly>=5.18",
    # Storage
    "sqlalchemy>=2.0",
    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # HTML parsing
    "selectolax>=0.3",
]

[project.optional-dependencies]
llm = [
    "openai>=1.10",
    "anthropic>=0.40",
]
nlp-ja = [
    "ginza>=5.1",
    "ja-ginza>=5.1",
    "oseti>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
]
all = ["for-eigyo[llm,nlp-ja,dev]"]

[project.scripts]
eigyo = "for_eigyo.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/for_eigyo"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
