[project]
name = "fermiscope"
version = "0.1.0"
description = "証拠に基づくフェルミ推定を行うローカルWebアプリケーション"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy>=2.0.36,<3.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "scipy>=1.13,<2.0",
    "pint>=0.24,<1.0",
    "pyyaml>=6.0,<7.0",
    "beautifulsoup4>=4.12,<5.0",
    "pypdf>=5.0,<7.0",
    "python-docx>=1.1,<2.0",
    "openpyxl>=3.1,<4.0",
    "python-pptx>=0.6.23,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<2.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "types-PyYAML",
    "pandas-stubs",
]
e2e = [
    "playwright>=1.48,<2.0",
    "pytest-playwright>=0.5,<1.0",
]
# JS描画ページ用の Selenium ハイブリッド取得(任意)。別途 Chromium と chromedriver が必要。
selenium = [
    "selenium>=4.15,<5.0",
]

[project.scripts]
fermiscope = "fermiscope.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fermiscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: browser-based end-to-end tests (require Playwright browser)",
]

[tool.ruff]
# 日本語文字列(説明文・監査メッセージ)が多いため120桁
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "A", "C4", "RET", "SIM"]
ignore = [
    "S101",   # assert (used in tests)
    "SIM108", # ternary is not always clearer
    "RET504", # explicit assignment before return can aid readability
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "E501", "C408", "A002"]
"scripts/**" = ["S"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["fermiscope"]
strict_optional = true
warn_unused_ignores = false
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fermiscope.api.*"
disallow_untyped_defs = false
