[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmlab"
version = "0.1.0"
description = "JupyterLab で OpenAI 互換エンドポイント（ローカルLLM）を使う AI コーディング支援ツールキット（チャット / 補完 / RAG）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "for_eigyo" }]
dependencies = [
    "openai>=1.30",
    "ipython>=8.0",
    "ipywidgets>=8.0",
    # Jupyter 本体（補完・チャットは自前実装。jupyter-ai は使わない）
    "jupyterlab>=4.1",
    # RAG（PagedRAG/DocRAG）
    "llama-index-core>=0.11",
    "llama-index-llms-openai-like>=0.2",
    "llama-index-embeddings-openai-like>=0.2",
    "llama-index-readers-file>=0.2",
    # BookRAG（論文忠実版: BookIndex = Tree + KG + GT-Link）
    "numpy>=1.24",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=8.0"]
# サーバに /v1/embeddings が無い場合のローカル埋め込み（configure(embed_provider="local")）
local-embeddings = ["llama-index-embeddings-huggingface>=0.2"]
# MultiPaperRAG の表抽出（compare_table, PDF）
tables = ["pdfplumber>=0.11"]
# Word/Excel の本文・表（add_paper で .docx/.xlsx を扱う）
office = ["docx2txt>=0.8", "python-docx>=1.1", "openpyxl>=3.1", "pandas>=2.0"]
# 図/グラフ理解（MultiPaperRAG(pics=True)）。画像対応モデルも必要
figures = ["pymupdf>=1.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
