[project]
name = "dro-backend"
version = "0.1.0"
description = "Deep Research Orchestrator - Control API / Orchestrator / Normalizer / Synthesis"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "sqlalchemy==2.0.40",
    "psycopg[binary]==3.2.9",
    "alembic==1.15.2",
    "celery==5.5.2",
    "redis==5.2.1",
    "httpx==0.28.1",
    "cryptography==44.0.3",
    "python-multipart==0.0.20",
    "structlog==25.3.0",
    "opentelemetry-api==1.32.1",
    "opentelemetry-sdk==1.32.1",
    "opentelemetry-instrumentation-fastapi==0.53b1",
    "sse-starlette==2.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-timeout==2.4.0",
    "ruff==0.11.9",
    "mypy==1.15.0",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 300

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
