[project]
name = "dro-runner-core"
version = "0.1.0"
description = "Deep Research Orchestrator - Runner API v1 shared framework"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.4",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner_core"]
