# DRO open-deep-research Runner — 依存の固定ピン一覧 (PyPIのみ、git URL禁止)
#
# runner_core (dro-runner-core) はPyPIに存在しないため依存に書かず、
# Dockerfile / ローカルdevで ../common から先にインストールする。
#
# mcp / httpx / langchain-mcp-adapters は open-deep-research の推移的依存だが、
# searxng_mcp.py が直接使うAPIをローカル検証したバージョンに明示ピンする。
[project]
name = "dro-runner-open-deep-research"
version = "0.1.0"
description = "Deep Research Orchestrator - open_deep_research runner service"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "open-deep-research==0.0.16",
    "mcp==1.28.1",
    "httpx==0.28.1",
    "langchain-mcp-adapters==0.3.0",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["odr_engine.py", "worker.py", "main.py", "searxng_mcp.py"]
